--- a/i18n/en/docusaurus-plugin-content-docs/current/components/button.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/components/button.mdx
@@ -24,7 +24,7 @@ import button_states from './img/button-states.jpg';
 
   <TabItem value="design">
 
-## Visão geral
+## General
 
 Os botões são utilizados para realizar ações e para tomada de decisões. Podem ser utilizado em páginas e também dentro de outros componentes.
 
