--- a/i18n/en/docusaurus-plugin-content-docs/current/style-guide/colors.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/style-guide/colors.mdx
@@ -1,6 +1,6 @@
 import ColorsDS from './img/colors-ds.svg';
 
-# Cores
+# Colors
 
 Mais do que carregar expressividade e fazer conexão com a marca a qual representa, as cores utilizadas na interface assumem diversos papéis que auxiliam na compreensão das informações que estão sendo apresentadas, tendo impacto direto na usabilidade e acessibilidade.
 
