--- a/i18n/pt/docusaurus-plugin-content-docs/current.json
+++ b/i18n/pt/docusaurus-plugin-content-docs/current.json
@@ -3,8 +3,8 @@
     "message": "Next",
     "description": "The label for version current"
   },
-  "sidebar.documentation.category.Guia de Estilo": {
-    "message": "Guia de Estilo",
-    "description": "The label for category Guia de Estilo in sidebar documentation"
+  "sidebar.documentation.category.Guia de estilo": {
+    "message": "Guia de estilo",
+    "description": "The label for category Guia de estilo in sidebar documentation"
   }
 }
