--- a/i18n/pt/docusaurus-theme-classic/footer.json
+++ b/i18n/pt/docusaurus-theme-classic/footer.json
@@ -1,6 +1,6 @@
 {
   "link.title.Docs": {
-    "message": "Documentação",
+    "message": "Dccumentação",
     "description": "The title of the footer links column with title=Docs in the footer"
   },
   "link.title.Community": {
