--- a/docs/components/button.mdx
+++ b/docs/components/button.mdx
@@ -6,10 +6,12 @@ sidebar_label: Button
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-import '@animaliads/ani-button';
 
 import ButtonAnatomy from './img/button-anatomy.svg';
 import button_states from './img/button-states.jpg';
+
+import WebComponentReact from './../../src/components/WebComponent.js';
+
 
 # Button
 
@@ -28,7 +30,8 @@ import button_states from './img/button-states.jpg';
 
 Os botões são utilizados para realizar ações e para tomada de decisões. Podem ser utilizado em páginas e também dentro de outros componentes.
 
-<ani-button>Hello my component</ani-button>
+
+<WebComponentReact />
 
 ### Boas práticas
 
