--- a/i18n/pt/code.json
+++ b/i18n/pt/code.json
@@ -1,6 +1,6 @@
 {
   "homepage.title": {
-    "message": "Bem vindo ao meu website",
+    "message": "Welcome to my website",
     "description": "The homepage welcome message"
   },
   "theme.NotFound.title": {
