--- a/i18n/pt/docusaurus-theme-classic/footer.json
+++ b/i18n/pt/docusaurus-theme-classic/footer.json
@@ -1,14 +1,14 @@
 {
   "link.title.Docs": {
-    "message": "Dccumentação",
+    "message": "Docs",
     "description": "The title of the footer links column with title=Docs in the footer"
   },
   "link.title.Community": {
-    "message": "Comunidade",
+    "message": "Community",
     "description": "The title of the footer links column with title=Community in the footer"
   },
   "link.title.More": {
-    "message": "Mais",
+    "message": "More",
     "description": "The title of the footer links column with title=More in the footer"
   },
   "link.item.label.Tutorial": {
