--- a/docs/style-guide/colors.mdx
+++ b/docs/style-guide/colors.mdx
@@ -1,5 +1,7 @@
 import ColorsDS from './img/colors-ds.svg';
 
+import ColorsComponent from './../../src/components/Colors.js'
+
 # Cores
 
 Mais do que carregar expressividade e fazer conexão com a marca a qual representa, as cores utilizadas na interface assumem diversos papéis que auxiliam na compreensão das informações que estão sendo apresentadas, tendo impacto direto na usabilidade e acessibilidade.
@@ -28,6 +30,9 @@ Pensando nos diversos papéis e contextos de uso de cor, a estrutura geral de co
 - Action color
 
 </div>
+
+<ColorsComponent />
+
 
 <div style={{ display: 'inline-block', width: '33.333%' }}>
 
