--- a/docs/components/checkbox.mdx
+++ b/docs/components/checkbox.mdx
@@ -7,7 +7,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 
-import CheckboxAnatomy from './img/checkbox-anatomy.jpg';
+import CheckboxAnatomy from './img/CheckBox/checkbox-anatomy.jpg';
 
 import WebComponentReact from './../../src/components/WebComponent.js';
 
@@ -18,9 +18,9 @@ import WebComponentReact from './../../src/components/WebComponent.js';
   defaultValue="design"
   lazy
   values={[
-    {label: 'Design', value: 'design'},
+    {label: 'Uso', value: 'design'},
     {label: 'Desenvolvimento', value: 'dev'},
-    {label: 'Propriedades Customizaveis', value: 'custom-properies'},
+    {label: 'Customização', value: 'acess'},
   ]}>
 
   <TabItem value="design">
