Arquitetura de info

--- a/docs/foundation/style-guide/colors.mdx
+++ b/docs/foundation/style-guide/colors.mdx
@@ -1,8 +1,8 @@
 import ColorsDS from './img/colors-ds.svg';
 
-import ColorsComponent from './../../src/components/Colors.js'
+import ColorsComponent from './../../../src/components/Colors.js'
 
-# Cores
+# Boas praticas
 
 Mais do que carregar expressividade e fazer conexão com a marca a qual representa, as cores utilizadas na interface assumem diversos papéis que auxiliam na compreensão das informações que estão sendo apresentadas, tendo impacto direto na usabilidade e acessibilidade.
 
