--- a/docs/components/checkbox.mdx
+++ b/docs/components/checkbox.mdx
@@ -5,9 +5,16 @@ sidebar_label: CheckBox
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import BestPracticesComponent from './helpers/components/best-practices.tsx';
 
+import checkboxAnatomy from './img/checkbox/checkbox-anatomy.jpg';
+import checkboxSize from './img/checkbox/checkbox-size.jpg';
 
-import CheckboxAnatomy from './img/Checkbox/checkbox-anatomy.jpg';
+import Do1 from './img/checkbox/checkbox-do-1.jpg';
+import Do2 from './img/checkbox/checkbox-do-2.jpg';
+import Dont1 from './img/checkbox/checkbox-dont-1.jpg';
+import Dont2 from './img/checkbox/checkbox-dont-2.jpg';
+import types from './img/checkbox/checkbox-types.jpg';
 
 import WebComponentReact from './../../src/components/WebComponent.js';
 
@@ -20,7 +27,7 @@ import WebComponentReact from './../../src/components/WebComponent.js';
   values={[
     {label: 'Uso', value: 'design'},
     {label: 'Desenvolvimento', value: 'dev'},
-    {label: 'Customização', value: 'acess'},
+    {label: 'Customização', value: 'custom-properies'},
   ]}>
 
   <TabItem value="design">
@@ -28,24 +35,100 @@ import WebComponentReact from './../../src/components/WebComponent.js';
 ## Visão geral
 
 O componente checkbox (caixa de seleção) é usado para permitir que o usuário selecione uma ou mais opções de um número limitado de escolhas.
-
 As caixas de seleção atuam de forma independente, ou seja, a escolha de uma opção não afeta as outras caixas e seus status.
-
 
 ### Anatomia
 
-O botão é composto por um background que recebe uma cor de marca e uma label que descreve a interação que será realizada.
+O checkbox é composto por _background_ e _border_. Também contém partes que são específicas de variação do componente ou estados de interação, como _shadow_ no estado hover.
 
-<img src={CheckboxAnatomy} alt="Os cinco estados do botão primário dispostos lado a lado" />
-**1.** Label
+<img
+  src={checkboxAnatomy}
+  alt="Anatomia do checkbox disposto lado a lado, sendo 1 border, 2 background, 3 icon, 4 shadow hover e 5 outline"
+/>
+
+**1.** Border
 
 **2.** Background
 
-### Estados do botão
+**3.** Icon (checked)
 
-O botão possui estados e se modifica de acordo com a interação do usuário. São eles:
+**4.** Shadow (hover)
 
-Default, Hover, Focus, Disabled e Focusable Disabled.
+**5.** Outline (focused)
+
+
+
+### Comportamento
+
+O componente checkbox pode assumir três 3 variações:
+- **Unchecked**: item desmarcado
+- **Checked**: item marcado
+- **Mixed:** quando, em um grupo de checkbox relacionados, alguns itens do grupo (mas não todos) foram marcados
+
+### Tamanhos
+
+O componente possui dois tamanhos diferentes: _Medium_ e _Large_. O tamanho medium é o tamanho padrão. O large pode ser usado em casos específicos, como em cards por exemplo.
+
+<img
+  src={checkboxSize}
+  alt="Duas variações de tamanho para o checkbox dispostas lado a lado"
+/>
+
+Os componentes são formados por tokens, sendo estes propriedades de estilo que definem como será estruturado e estilizado. Os tokens que podem ser alterados pelas marcas, podem ser conferidos na seção de [propriedades customizáveis](https://www.notion.so/Checkbox-b8870a364228481b8350567be1cc63d4).
+
+
+## Boas práticas
+
+O componente foi projetado para atender os requisitos das Diretrizes de Acessibilidade para Conteúdo Web (WCAG) 2.1. Também foram estruturadas padrões de usabilidade para auxiliar na utilização do componente e garantir uma boa experiência para os usuários. Por isso, é muito importante que, ao aplicar esse componente, o proprietário do conteúdo leve em consideração alguns critérios e práticas:
+
+### Uso
+
+- Ao utilizar label para acompanhar o checkbox, posicione a mesma ao lado direito da caixa de seleção;
+- Ordene as opções de checkbox de forma lógica, como por exemplo em ordem alfabética, numeral ou com base nos itens mais escolhidos;
+- É recomendável não utilizar mais do que 7 itens em uma lista de opções;
+- Use textos curtos e, sempre que possível, mantenha a label de uma caixa de seleção em uma única linha;
+
+<BestPracticesComponent
+  doImg={Do1}
+  doAlt="Checkbox com uma opção com texto mais longo, mas em linha única"
+  doDescription="Manter o texto em linha única facilita a correlação entre a label e o seletor."
+  dontImg={Dont1}
+  dontAlt="Checkbox com opções listadas uma embaixo da outra"
+  dontDescription="O texto em duas linhas torna os espaços entre as opções irregulares."
+/>
+
+- Prefira a utilização do componente em uma lista vertical ao invés de horizontal, pois permite uma leitura mais fácil
+  para os usuários. O alinhamento horizontal dificulta correlacionar as labels às caixas correspondentes.
+
+<BestPracticesComponent
+  doImg={Do2}
+  doAlt="Checkbox com opções listadas lado a lado"
+  doDescription="Alinhe os componentes verticalmente sempre que possível."
+  dontImg={Dont2}
+  dontAlt="Checkbox com opções listadas lado a lado"
+  dontDescription="Ao inserir os componentes lado a lado, certifique-se de inserir um espaçamento adequado entre as opções."
+  warning="true"
+/>
+
+### Comportamento
+
+- Prefira não deixar nenhuma opção pré-selecionada, pois pode passar despercebida pelos usuários e ocasionar no envio de uma resposta errada;
+- Se o checkbox estiver acompanhado de outro elemento, como label, é recomendado que a área clicável envolva o elemento também.
+
+### Interação
+
+- A ordem de foco deve acontecer em sequência lógica. Como por exemplo, quando não tem nenhuma opção selecionada, o foco deve mover-se para o primeiro item da lista. (WCAG [2.4.3: Focus Order](https://www.w3.org/WAI/WCAG21/Understanding/focus-order))
+- Com navegação via teclado, o checkbox em foco é marcado ou desmarcado através da tecla _space_
+
+### Acessibilidade tratada no componente
+
+Algumas diretrizes de acessibilidade já são tratadas no componente, internamente, e não podem ser alteradas pelo proprietário do conteúdo. São elas:
+
+- O componente foi desenvolvido utilizando controles padrões HTML para permitir a identificação do mesmo na interface por tecnologias assistivas. ([WCAG 4.1.2: Name, Role, Value](https://www.w3.org/WAI/WCAG21/Understanding/name-role-value))
+- A área do foco precisar ter uma espessura de pelo menos 2 pixels CSS e o foco não pode ficar escondido por outros elementos da tela. ([WCAG 2.4.12: Focus Appearance](https://www.w3.org/WAI/WCAG22/Understanding/focus-appearance-enhanced))
+- O estado de foco deve ser sempre preservado, inclusive quando o componente estiver desabilitado. ([WCAG 2.4.7: Focus Visible](https://www.w3.org/WAI/WCAG21/Understanding/focus-visible))
+- A cor não deve ser o único meio para diferenciar o componente do seu estado marcado e desmarcado. ([WGAG 1.4.1: Use of Color, 3.2.4: Consistent Identification](https://www.w3.org/WAI/WCAG21/Understanding/use-of-color))
+
 
 
 </TabItem>
@@ -54,59 +137,49 @@ Default, Hover, Focus, Disabled e Focusable Disabled.
 
 ## Desenvolvimento
 
-### Instalação
+### Instalação do pacote
+
+Caso você já tenha feito o passo-a-passo descrito em [Começando](?path=/docs/começando--page),
+você pode pular esta instalação e ir direto para o tópico [Como utilizar](#como-utilizar).
 
 Você pode instalar o componente de forma isolada, conforme o exemplo abaixo:
 
 ```
-npm install @animaliads/ani-button
-```
-
-Ou instalar a biblioteca inteira de componentes:
-
-```
-npm install @animaliads/web-components
+npm install @animaliads/ani-checkbox
 ```
 
 ### Como utilizar
 
-Para utilizar o web component na sua aplicação você precisa importar o arquivo principal:
+Para utilizar este componente na sua aplicação você precisa importar o arquivo principal.
+Essa importação irá variar conforme o tipo de aplicação que você está utilizando, por exemplo: angular, react ou
+somente javascript.
 
-```html title="html"
-<script src="./node_modules/@animaliads/ani-button"></script>
+Depois de importar o arquivo principal, basta adicionar a tag `ani-checkbox` no seu código:
+
+```html
+<ani-checkbox>exemplo de label</ani-checkbox>
 ```
 
-Mas caso você estiver utilizando algum framework, pode ser necessário seguir a documentação do próprio
-componente para adicionar o web component. Ou apenas importar o arquivo do componente
-em um arquivo JS, por exemplo:
-
-```javascript title="javascript"
-import '@animaliads/ani-button';
-```
-
-Depois dessa configuração, basta adicionar a tag `ani-button` no seu código:
-
-```html title="html"
-<ani-button>Hello world!</ani-button>
-```
+> Para utilizar com o tema padrão, é necessário instalar e utilizar os pacotes `@animaliads/animalia-brand`
+> e `@animaliads/css-tokens`. Você pode ver um exemplo de utilização no [Live Demo](#live-demo).
 
 Para customizar o tema do componente, você pode estar utilizando as propriedades customizáveis
 da seguinte forma:
 
-```css title="css"
-ani-button {
-  --background: red;
-  --line-height: 100%;
-  --border-radius: 3px;
+```css
+ani-checkbox {
+  --color-unchecked: green;
+  --color-checked: coral;
 }
 ```
 
-Para saber quais são as propriedades disponível, consulte [propriedades customizáveis do botão](#propriedades-customizáveis).
+Para saber quais são as propriedades disponíveis, consulte [propriedades customizáveis](#propriedades-customizáveis).
 
 ### Live Demo
 
+
 <iframe
-  src="https://codesandbox.io/embed/ani-button-ofjep?fontsize=14&hidenavigation=1&theme=dark"
+  src="https://stackblitz.com/edit/react-ani-checkbox?embed=1&file=src/App.js"
   style={{
     width: '90%',
     height: '500px',
@@ -114,50 +187,39 @@ Para saber quais são as propriedades disponível, consulte [propriedades custom
     borderRadius: '4px',
     overflow: 'hidden',
   }}
-  title="ani-button"
+  title="ani-link"
   allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
   sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
 ></iframe>
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-button--sample).
-
-Link úteis:
-
-- [Angular elements](https://angular.io/guide/elements)
-- [Usando Web Components no React](https://pt-br.reactjs.org/docs/web-components.html)
+Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-checkbox--sample).
 
 </TabItem>
 
   <TabItem value="custom-properies">
 
+
 ## Propriedades customizáveis
 
-O botão possui propriedades customizáveis que podem variar de acordo com o tema selecionado. As propriedades customizáveis podem ser alteradas para cada produto, de acordo com os tokens de marca e tokens globais. Com isso, garantimos uma consistência no Design System, sem perder a identidade de cada marca.
+O componente possui propriedades customizáveis, que possibilitam fazer alterações, de acordo com a marca ou o tema a ser utilizado. Com isso, garantimos uma consistência ao Design System, sem perder a identidade de cada marca.
 
-### Button
+O checkbox possui quatro estados, que se modificam de acordo com a interação do usuário, sendo eles: _Normal_, _Hover_, _Focused_ e _Disabled_.
 
-| Propriedade        | Contexto   |
-| ------------------ | ---------- |
-| `--font-family`    | Label      |
-| `--text-color`     | Label      |
-| `--font-size`      | Label      |
-| `--line-height`    | Label      |
-| `--background`     | Background |
-| `--border-radius`  | Background |
-| `--spacing-squish` | Background |
-| `--shadow`         | Background |
+| Propriedade                  | Descrição                                                                        | Valor padrão            |
+| ---------------------------- | -------------------------------------------------------------------------------- | ----------------------- |
+| `--color-unchecked `         | cor predominante (background) quando unchecked                                   | $color-neutral-light-00 |
+| `--color-checked`            | cor da borda e do preenchimento interno (fill) quando checked                    | $color-action-default   |
+| `--border-color`             | cor da borda no estado normal                                                    | $color-neutral-dark-70  |
+| `--color-hover`              | cor da borda no estado hover                                                     | $color-action-hover     |
+| `--shadow-color-hover`       | cor da borda externa no estado hover                                             | $color-brand-01-lighter |
+| `--color-unchecked-disabled` | cor predominante (background) quando unchecked no estado disabled                | $color-action-disabled  |
+| `--color-checked-disabled`   | cor da borda e do preenchimento interno (fill) quando checked no estado disabled | $color-neutral-dark-70  |
+| `--outline-color-focused`    | cor do outline do focus                                                          | $color-action-focus     |
 
-### Propriedades customizáveis em cada estado
-
-| Estado             | Propriedade                | Contexto   |
-| ------------------ | -------------------------- | ---------- |
-| hover              | `--background-hover`       | Background |
-| focus              | `--outline-color-focused`  | Outline    |
-| pressed            | `--background-pressed`     | Background |
-| pressed            | `--outline-color-pressed`  | Outline    |
-| disabled           | `--background-disabled`    | Background |
-| disabled           | `--text-color-disabled`    | Label      |
-| focusable disabled | `--outline-color-disabled` | Outline    |
+<img
+  src={types}
+  alt="Os estados de interação do checkbox unchecked, com as respectivas versões checked e mixed abaixo"
+/>
 
 </TabItem>
 </Tabs>
