--- a/docs/components/checkbox.mdx
+++ b/docs/components/checkbox.mdx
@@ -6,6 +6,7 @@ sidebar_label: CheckBox
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import BestPracticesComponent from './helpers/components/best-practices.tsx';
+import LiveDemoComponent from './helpers/components/live-demo.tsx';
 
 import checkboxAnatomy from './img/checkbox/checkbox-anatomy.jpg';
 import checkboxSize from './img/checkbox/checkbox-size.jpg';
@@ -177,20 +178,9 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
 
 ### Live Demo
 
-
-<iframe
-  src="https://stackblitz.com/edit/react-ani-checkbox?embed=1&file=src/App.js"
-  style={{
-    width: '90%',
-    height: '500px',
-    border: 'solid 1px black',
-    borderRadius: '4px',
-    overflow: 'hidden',
-  }}
-  title="ani-link"
-  allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
-  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
-></iframe>
+<LiveDemoComponent
+  react="https://stackblitz.com/edit/react-ani-checkbox?embed=1&file=src/App.js"
+/>
 
 Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-checkbox--sample).
 
