--- a/docs/components/link.mdx
+++ b/docs/components/link.mdx
@@ -5,6 +5,7 @@ sidebar_label: Link
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import LiveDemoComponent from './helpers/components/live-demo.tsx';
 
 import link_anatomy from './img/link/link-anatomy.jpg';
 import link_do_1 from './img/link/link-do-1.jpg';
@@ -258,6 +259,11 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
 
 ### Live Demo
 
+
+<LiveDemoComponent
+  javascript="https://stackblitz.com/edit/ani-link?embed=1&file=index.html"
+  react="https://stackblitz.com/edit/react-ani-link?embed=1&file=src/App.js"
+/>
 
 Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-link--sample).
 
