fix: img checkbox

--- a/docs/components/checkbox.mdx
+++ b/docs/components/checkbox.mdx
@@ -10,7 +10,6 @@ import LiveDemoComponent from './helpers/components/live-demo.tsx';
 
 import checkboxAnatomy from './img/checkbox/checkbox-anatomy.jpg';
 import checkboxSize from './img/checkbox/checkbox-size.jpg';
-
 import Do1 from './img/checkbox/checkbox-do-1.jpg';
 import Do2 from './img/checkbox/checkbox-do-2.jpg';
 import Dont1 from './img/checkbox/checkbox-dont-1.jpg';
@@ -28,7 +27,7 @@ import WebComponentReact from './../../src/components/WebComponent.js';
   values={[
     {label: 'Uso', value: 'design'},
     {label: 'Desenvolvimento', value: 'dev'},
-    {label: 'Customização', value: 'custom-properies'},
+    {label: 'Customização', value: 'custom-properties'},
   ]}>
 
   <TabItem value="design">
@@ -186,7 +185,7 @@ Para saber a lista de propriedades e eventos, acesse o [guia de referencia de AP
 
 </TabItem>
 
-  <TabItem value="custom-properies">
+  <TabItem value="custom-properties">
 
 
 ## Propriedades customizáveis
