add checkboxAnatomy img

--- a/docs/components/checkbox.mdx
+++ b/docs/components/checkbox.mdx
@@ -15,6 +15,8 @@ import Do2 from './img/checkbox/checkbox-do-2.jpg';
 import Dont1 from './img/checkbox/checkbox-dont-1.jpg';
 import Dont2 from './img/checkbox/checkbox-dont-2.jpg';
 import types from './img/checkbox/checkbox-types.jpg';
+import checkboxAnatomy from './img/checkbox/checkbox-anatomy.jpg';
+
 
 import WebComponentReact from './../../src/components/WebComponent.js';
 
@@ -41,6 +43,10 @@ As caixas de seleção atuam de forma independente, ou seja, a escolha de uma op
 
 O checkbox é composto por _background_ e _border_. Também contém partes que são específicas de variação do componente ou estados de interação, como _shadow_ no estado hover.
 
+<img
+  src={checkboxAnatomy}
+  alt="Anatomia do checkbox disposto lado a lado, sendo 1 border, 2 background, 3 icon, 4 shadow hover e 5 outline"
+/>
 
 
 **1.** Border
