--- a/docs/components/card.mdx
+++ b/docs/components/card.mdx
@@ -184,7 +184,7 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
   react="https://stackblitz.com/edit/react-ani-card?embed=1&file=src/App.js"
 />
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-checkbox--sample).
+Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-card--sample).
 
 </TabItem>
 
@@ -195,7 +195,7 @@ Para saber a lista de propriedades e eventos, acesse o [guia de referencia de AP
 
 O componente possui propriedades customizáveis, que possibilitam fazer alterações, de acordo com a marca ou o tema a ser utilizado. Com isso, garantimos uma consistência ao Design System, sem perder a identidade de cada marca.
 
-O checkbox possui quatro estados, que se modificam de acordo com a interação do usuário, sendo eles: _Normal_, _Hover_, _Focused_ e _Selected_.
+O card possui estados e se modifica de acordo com o tipo do card. Os seus estados são: _Normal_, _Hover_, _Focused_ e _Selected_.
 
 | Propriedade                  | Descrição                                                                        | Valor padrão            |
 | ---------------------------- | -------------------------------------------------------------------------------- | ----------------------- |
