--- a/docs/components/textfield.mdx
+++ b/docs/components/textfield.mdx
@@ -5,6 +5,7 @@ sidebar_label: Textfield
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import BestPracticesComponent from './helpers/components/best-practices.tsx';
 import LiveDemoComponent from './helpers/components/live-demo.tsx';
 
 import textfield_types from './img/textfield/textfield-type.png';
@@ -29,14 +30,14 @@ import WebComponentReact from './../../src/components/WebComponent.js';
   values={[
     {label: 'Uso', value: 'design'},
     {label: 'Desenvolvimento', value: 'dev'},
-    {label: 'Customização', value: 'custom-properies'},
+    {label: 'Customização', value: 'custom-properties'},
   ]}>
 
   <TabItem value="design">
 
 ## Visão geral
 
-O `text-field` é um componente de entrada de dados que possibilita à pessoa que está interagindo com a interface insira e edite informações. Esse tipo de campo possui uma única linha e é bastante comum em formulários.
+O *text-field* é um componente de entrada de dados que possibilita à pessoa que está interagindo com a interface insira e edite informações. Esse tipo de campo possui uma única linha e é bastante comum em formulários.
 
 ### Tipos
 
@@ -55,24 +56,25 @@ Pensando na modularidade do Design system, o text field possui duas composiçõe
 
 Estruturalmente, o text field pode conter *label*, *field*, *help text* e *text error.* Já o campo em si, possui suas partes específicas, como *border* e *input text.*
 
-**Text Field**
+#### Text Field
 
 <img
   src={textfield_anatomy}
   alt="Demonstrativo das 4 partes do text field completo"  
 />
 
-**1.** Label (`ani-label`)
+**1.** Label (ani-label)
 
 **2.** Field (single)
 
 **3.** Help text
 
 **4.** Text error (*error*)
+  
 
 
 
-**Text Field (Single)**
+#### Text Field (Single)
 
 <img
   src={textfield_single_anatomy}
@@ -93,15 +95,69 @@ Estruturalmente, o text field pode conter *label*, *field*, *help text* e *text 
 O componente é estruturado e estilizado por meio dos design tokens. Os tokens que podem ser alterados pelas marcas estão listados na seção de [propriedades customizáveis](#propriedades-customizáveis).
 
 
-<aside>
-🔗 A label é tratada como um componente à parte no Design System (`ani-label`). Você pode consultar suas variações e customizações na documentação específica desse componente.
+:::note
+A label é tratada como um componente à parte no Design System (`ani-label`). Você pode consultar suas variações e customizações na documentação específica desse componente.
 
-**→ Label**
+🔗 Label
 
-</aside>
+:::
+
+## Boas práticas
+
+O componente foi projetado para atender os requisitos das Diretrizes de Acessibilidade para Conteúdo Web (WCAG 2.1). Também foi estruturado com base em padrões de usabilidade para contribuir com uma boa experiência. Por isso, ao aplicar esse componente, é muito importante que sejam levados em consideração alguns critérios e práticas:
+
+- Use label com textos auto-explicativos, com instruções claras e objetivas, para que seja possível identificar com facilidade qual informação precisa ser inserida no campo;
+- Mantenha a largura do campo adequada ao conteúdo esperado, evitando com que sejam muito maiores ou muito menores do que o necessário;
+- Nunca use o placeholder para substituir a label do componente. Use-o para trazer mais contexto sobre o tipo de informação que precisa ser adicionada;
+
+<BestPracticesComponent
+  doImg={textfield_do_1}
+  doAlt="Dois inputs, CPF e email, identificados pela label"
+  doDescription="Use labels curtas e objetivas, identificando com clareza o campo a qual está relacionada."
+  dontImg={textfield_dont_1}
+  dontAlt="Dois inputs, CPF e email, sem label, com a identificação dos campos no placeholder"
+  dontDescription="Usar o placeholder como substituto da label compromete a identificação do campo após a inserção do conteúdo e é ruim para acessibilidade, pois alguns leitores de tela ignoram o placeholder."
+/>
 
 
+- Um text field pode receber diversos tipos de informação, sendo o tipo texto o padrão. No desenvolvimento, use o atributo adequado para o tipo de dado esperado, pois tornam o formulário mais acessível (Exemplo: para um campo de e-mail, `<input type="email">`);
+- Sempre que possível, utilize máscara no campo para ajudar a identificar o padrão de conteúdo esperado.
 
+### Erro, validação e ajuda
+
+- Sempre que possível, opte por fazer a validação dos dados antes que seja feito o envio formulário;
+- Sinalize a obrigatoriedade do campo de acordo com o contexto. Quando a maioria dos campos for opcional, indique todos que são obrigatórios. Quando a maioria dos campos for obrigatório, sinalize os campos que são opcionais;
+
+
+<BestPracticesComponent
+  doImg={textfield_do_2}
+  doAlt="Inputs Nome, CPF e Email, sendo que apenas o email está sinalizado como opcional"
+  doDescription="Indique a obrigatoriedade do campo, conforme o contexto, evitando a carga de informação nos campos."
+  dontImg={textfield_dont_2}
+  dontAlt="Inputs Nome, CPF e Email, com os dois primeiros marcados como obrigatório."
+  dontDescription="Repetir a informação que é a maioria no formulário gera redundância."
+/>
+
+- Se apenas um erro for possível, utilize o *help text* para descrever como evitá-lo. Quando vários erros forem possíveis, a mensagem deve ser escrita pensando no erro mais provável;
+- Em caso de um erro, sinalize o item a ser corrigido, com uma mensagem que auxilie na sua correção.
+
+<BestPracticesComponent
+  doImg={textfield_do_3}
+  doAlt="Campo nova senha sinalizado com erro e mensagem informando que precisa ter pelo menos 5 caracteres"
+  doDescription="Escreva mensagens de erro que ajudem a corrigi-los."
+  dontImg={textfield_dont_3}
+  dontAlt="Campo nova senha sinalizado com erro e mensagem senha inválida"
+  dontDescription="Evite mensagens de erro genéricas."
+/>
+
+### Acessibilidade tratada no componente
+
+Algumas diretrizes de acessibilidade já são tratadas no componente, internamente, e não podem ser alteradas. São elas:
+
+- O text-field foi desenvolvido com uso de controles padrões HTML, o que permite a identificação do mesmo na interface por tecnologias assistivas. ([WCAG 4.1.2: Name, Role, Value](https://www.w3.org/WAI/WCAG21/Understanding/name-role-value))
+- O foco é visível e possui uma espessura superior a 2 pixels CSS, não ficando escondido por outros elementos da tela. ([WCAG 2.4.12: Focus Appearance](https://www.w3.org/WAI/WCAG22/Understanding/focus-appearance-enhanced))
+- Inclusão do ARIA-DESCRIBEDBY na tag do campo, mantendo uma sequência lógica dos itens: label, campo de input, error text/ help text.
+- A identificação do erro acontece também através da mudança de cor do campo, mas também de um ícone junto da mensagem ([WGAG 1.4.1: Use of Color, 3.2.4: Consistent Identification](https://www.w3.org/WAI/WCAG21/Understanding/use-of-color))
 
 </TabItem>
 
@@ -117,7 +173,7 @@ você pode pular esta instalação e ir direto para o tópico [Como utilizar](#c
 Você pode instalar o componente de forma isolada, conforme o exemplo abaixo:
 
 ```
-npm install @animaliads/ani-link
+npm install @animaliads/ani-textfield
 ```
 
 ### Como utilizar
@@ -126,10 +182,10 @@ Para utilizar este componente na sua aplicação você precisa importar o arquiv
 Essa importação irá variar conforme o tipo de aplicação que você está utilizando, por exemplo: angular, react ou
 somente javascript.
 
-Depois de importar o arquivo principal, basta adicionar a tag `ani-link` no seu código:
+Depois de importar o arquivo principal, basta adicionar a tag `ani-textfield` no seu código:
 
 ```html
-<ani-link url="https://google.com">Acesse o Google</ani-link>
+<ani-textfield>exemplo de label</ani-textfield>
 ```
 
 > Para utilizar com o tema padrão, é necessário instalar e utilizar os pacotes `@animaliads/animalia-brand`
@@ -139,49 +195,52 @@ Para customizar o tema do componente, você pode estar utilizando as propriedade
 da seguinte forma:
 
 ```css
-ani-link {
-  --text-color: green;
-  --text-color-visited: orange;
-  --text-color-hover: black;
+ani-textfield {
+  --color: green;
 }
 ```
 
-Para saber quais são as propriedades disponíveis, consulte [propriedades customizáveis do link](#propriedades-customizáveis).
+Para saber quais são as propriedades disponíveis, consulte [propriedades customizáveis](#propriedades-customizáveis).
 
 ### Live Demo
 
+<LiveDemoComponent react="https://stackblitz.com/edit/react-ani-textfield?embed=1&file=src/App.js" />
 
-<LiveDemoComponent
-  javascript="https://stackblitz.com/edit/ani-link?embed=1&file=index.html"
-  react="https://stackblitz.com/edit/react-ani-link?embed=1&file=src/App.js"
-/>
-
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-link--sample).
+Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-textfield--sample).
 
 
 
 </TabItem>
 
-  <TabItem value="custom-properies">
+  <TabItem value="custom-properties">
 
 ## Propriedades customizáveis
 
-O componente de link possui propriedades customizáveis, que possibilitam fazer alterações, de acordo com a marca ou o tema a ser utilizado. Com isso, garantimos uma consistência ao Design System, sem perder a identidade de cada marca.
 
-Possui cinco estados, que se modificam de acordo com a interação do usuário. São eles: Normal, Hover, Focus, Pressed e Visited.
+O componente de textfield possui propriedades customizáveis, que possibilitam fazer alterações, de acordo com a marca ou o tema a ser utilizado. Com isso, garantimos uma consistência ao Design System, sem perder a identidade de cada marca.
 
-| Propriedade               | Descrição                          | Valor padrão          |
-| ------------------------- | ---------------------------------- | --------------------- |
-| `--font-family`           | família tipográfica usada na label | $font-family-text     |
-| `--text-color`            | cor da label                       | $color-action-default |
-| `--text-color-hover`      | cor da label no estado hover       | $color-action-hover   |
-| `--outline-color-focused` | cor do outline do focus            | $color-action-focus   |
-| `--text-color-pressed`    | cor da label no estado pressed     | $color-action-pressed |
-| `--text-color-visited`    | cor da label no estado visited     | $color-action-pressed |
+
+| Propriedade                | Descrição                                                              | Valor padrão              |
+| -------------------------- | ---------------------------------------------------------------------- | ------------------------- |
+| `--font-family`            | família tipográfica                                                    | $font-family-text         |
+| `--font-size`              | tamanho da fonte                                                       | $font-size-default        |
+| `--text-color-placeholder` | cor do texto placeholder                                               | $color-neutral-light-30   |
+| `--color`                  | cor predominante (border)                                              | $color-neutral-dark-70    |
+| `--background`             | cor do background                                                      | $color-neutral-light-05   |
+| `--padding`                | tamanho do espaçamento interno (valor da propriedade `padding` do css) | left, right: 0.5rem (8px) |
+| `--text-color`             | cor do texto                                                           | $color-neutral-dark-90    |
+| `--color-hover`            | cor predominante (border) no estado hover                              | $color-action-hover       |
+| `--background-hover`       | cor do background no estado hover                                      | $color-brand-01-lightest  |
+| `--color-focused`          | cor predominante (border) no estado focus                              | $color-action-default     |
+| `--outline-color-focused`  | cor do outline no estado focus                                         | $color-action-focus       |
+| `--color-disabled`         | cor predominante (border) no estado disabled                           | $color-action-disabled    |
+| `--background-disabled`    | cor do background no estado disabled                                   | $color-neutral-light-20   |
+| `--text-color-disabled`    | cor do texto no estado disabled                                        | $color-neutral-dark-70    |
+
 
 <img
-  src={link_states}
-  alt="Os cinco estados de interação do link dispostos lado a lado"
+  src={textfield_states}
+  alt="Estados de interação do text field dispostos lado a lado"
 />
 
 </TabItem>
