--- a/docs/components/radio.mdx
+++ b/docs/components/radio.mdx
@@ -199,7 +199,7 @@ Possui cinco estados, que se modificam de acordo com a interação do usuário, 
 | `--outline-color-focused`    | cor do outline do focus                                                          | $color-action-focus     |
 
 <img
-  src={types}
+  src={radioTypes}
   alt="Os estados de interação do radio unchecked, com as respectivas versões checked e mixed abaixo"
 />
 
