fix: formatação texto do-dont

--- a/docs/components/switch.mdx
+++ b/docs/components/switch.mdx
@@ -90,7 +90,7 @@ O componente foi projetado para atender os requisitos das Diretrizes de Acessibi
   doDescription="A ação resultante da mudança de chave deve ter um resultado imediato para quem usa o sistema, que no exemplo seria ativar a biometria assim que a chave fosse ligada."
   dontImg={switch_dont_1}
   dontAlt="Componente switch com um rótulo '“'Concordo com os termos de uso'"
-  dontDescription="Não use *switch* apenas para marcar sim ou não, sem efeito no sistema. No exemplo, ao ligar a chave, nada aconteceria. O correto seria o uso de um *checkbox* nesse caso."
+  dontDescription="Não use switch apenas para marcar sim ou não, sem efeito no sistema. No exemplo, ao ligar a chave, nada aconteceria. O correto seria o uso de um checkbox nesse caso."
 />
 
 
@@ -99,10 +99,10 @@ O componente foi projetado para atender os requisitos das Diretrizes de Acessibi
 <BestPracticesComponent
   doImg={switch_do_2}
   doAlt="Exemplo de configuração de  como receber atualizações contendo duas opções em checkboxes. Abaixo da lista há um botão para salvar preferências"
-  doDescription="Opte por usar um *checkbox* ou *radio* ao invés do *switch* em situações que necessitem de alguma confirmação para que a mudança seja aplicada."
+  doDescription="Opte por usar um checkbox ou radio ao invés do switch em situações que necessitem de alguma confirmação para que a mudança seja aplicada."
   dontImg={switch_dont_2}
   dontAlt="Mesmo exemplo de configuração das atualizações e o botão para salvar, mas usando switches nas opções'"
-  dontDescription="Não use *switch* quando o resultado da mudança da chave não puder ter efeito imediato."
+  dontDescription="Não use switch quando o resultado da mudança da chave não puder ter efeito imediato."
 />
 
 
@@ -111,7 +111,7 @@ O componente foi projetado para atender os requisitos das Diretrizes de Acessibi
 <BestPracticesComponent
   doImg={switch_do_3}
   doAlt="Configuração de acesso a um projeto com 3 opções em radio: Todos, Membros da equipe e Somente você"
-  doDescription="Quando as opções forem dependentes entre si, opte por usar *radio button* ao invés do *switch*"
+  doDescription="Quando as opções forem dependentes entre si, opte por usar radio button ao invés do switch"
   dontImg={switch_dont_3}
   dontAlt="Mesmo exemplo de configuração das atualizações e o botão para salvar, mas usando switches nas opções'"
   dontDescription="Não use switch quando os itens tiverem qualquer dependência entre eles. Cada chave deve funcionar de forma individual, sem relação com outros controles."
