--- a/docs/components/radio.mdx
+++ b/docs/components/radio.mdx
@@ -185,7 +185,7 @@ Para saber a lista de propriedades e eventos, acesse o [guia de referencia de AP
 
 O componente possui propriedades customizáveis, que possibilitam fazer alterações, de acordo com a marca ou o tema a ser utilizado. Com isso, garantimos uma consistência ao Design System, sem perder a identidade de cada marca.
 
-Possui cinco estados, que se modificam de acordo com a interação do usuário, sendo eles: _Normal_, _Hover_, _Focused_ e _Disabled_.
+Possui quatro estados, que se modificam de acordo com a interação do usuário, sendo eles: _Normal_, _Hover_, _Focused_ e _Disabled_.
 
 | Propriedade                  | Descrição                                                                        | Valor padrão            |
 | ---------------------------- | -------------------------------------------------------------------------------- | ----------------------- |
