--- a/docs/components/textarea.mdx
+++ b/docs/components/textarea.mdx
@@ -11,7 +11,7 @@ import LiveDemoComponent from './helpers/components/live-demo.tsx';
 import WebComponentReact from './../../src/components/WebComponent.js';
 
 
-# Textfield
+# Textarea
 
 <Tabs
   defaultValue="design"
